# libmlxforge

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  SPECIFICATION.md  STORIES.md
.github/workflows/: ci.yml  release.yml
Formula/: mlxforge.rb
apps/: mlxforge.cpp  mlxforge_cli.cpp  xllm.cpp  xllm_cli.cpp
bindings/node/: README.md  index.d.ts  index.js  package.json
bindings/node/src/: addon.cc
bindings/rust/src/: lib.rs
bindings/swift/Sources/MLXForge/: MLXForge.swift
bindings/swift/Tests/MLXForgeTests/: MLXForgeTests.swift
cmake/: Dependencies.cmake
doc/: README.md  applications.md  architecture.md  contributing.md  distribution.md  embedding.md  llm-architecture.md  supported-models.md  tokenizer.md
doc/whitepaper/: mlxforge-whitepaper.tex
reference/: dump_ref.py
reference/fixtures/: attn_norm0.npy  k_rope0.npy  manifest.json  q_pre0.npy  q_rope0.npy  rope_freqs.npy  tokenizer_corpus.json  v0.npy
reference/fixtures_mistral/: argmax.npy  attn_norm0.npy  block0.npy  chat_ids.npy  embeddings.npy  greedy_tokens.npy  logits_last.npy  manifest.json  prompt_0_ids.npy  prompt_1_ids.npy  prompt_2_ids.npy
reference/fixtures_qwen3_yarn/: block0.npy  greedy_gaps_kvq4.npy  greedy_gaps_kvq8.npy  greedy_tokens.npy  greedy_tokens_kvq4.npy  k_rope0.npy  k_rope0_linear.npy  logits_last.npy  manifest.json  q_rope0.npy  q_rope0_linear.npy  rope_freqs.npy  rope_mscale.npy
src/cache/: batch_kv_cache.cpp  batch_kv_cache.h  kv_budget.cpp  kv_budget.h  kv_cache.cpp  kv_cache.h  prefix_cache.cpp  prefix_cache.h
src/capi/: mlxforge.cpp  mlxforge.h
src/core/: config.cpp  config.h  gguf.cpp  gguf.h  logging.cpp  weights.cpp
src/inspect/: model_schema.cpp  model_schema.h  safetensors_header.cpp  safetensors_header.h  schematic_html.cpp  schematic_html.h
src/model/: decoder_model.cpp  decoder_model.h  llama.cpp  llama.h  qwen3_vl.cpp  qwen3_vl.h  skinny_matmul.cpp  skinny_matmul.h
src/model/vision/: vit.cpp  vit.h
src/runtime/: engine.cpp  engine.h  metrics.h  multimodal_stream.cpp  multimodal_stream.h  single_stream.cpp  single_stream.h  worker.cpp  worker.h
src/sample/: sampler.cpp  sampler.h
src/scheduler/: request.h  scheduler.cpp  scheduler.h
src/server/: anthropic.cpp  anthropic.h  config.cpp  config.h  http_server.cpp  http_server.h
src/tokenizer/: bpe.h  tokenizer.cpp  tokenizer.h
src/vision/: preprocess.cpp  preprocess.h
tests/: CMakeLists.txt
tests/cache/: batch_kv_cache_test.cpp  batch_kv_filter_merge_test.cpp  kv_budget_test.cpp  kv_cache_test.cpp
tests/capi/: capi_endurance_test.cpp  capi_fuzz_test.cpp  capi_test.cpp
tests/core/: config_test.cpp  gguf_test.cpp  weights_test.cpp
tests/fixtures/: config_mistral_7b_v03.json
tests/inspect/: model_schema_test.cpp  safetensors_header_test.cpp  schematic_html_test.cpp
tests/model/: llama_forward_test.cpp  llama_front_test.cpp  mistral_forward_test.cpp  quantized_test.cpp  qwen3_moe_test.cpp  qwen3_vl_test.cpp  qwen3_yarn_test.cpp  rope_scaling_test.cpp  skinny_matmul_test.cpp  vit_test.cpp
tests/runtime/: single_stream_test.cpp
tests/sample/: sampler_test.cpp
tests/scheduler/: prefix_reuse_test.cpp  worker_test.cpp
tests/server/: anthropic_test.cpp  hardening_test.cpp
tests/support/: model_fixture.h  reference.h  reference_test.cpp
tests/tokenizer/: bpe_test.cpp  tokenizer_test.cpp
tests/vision/: preprocess_test.cpp
